✨ add api keys to project
